--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -7,3 +7,52 @@
   font-size: 2em;
   text-align: center;
 }
+
+*,
+::before,
+::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.modal-overlay {
+  position: fixed;
+  display: flex;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-wrapper {
+  max-width: 500px;
+}
+.modal-content {
+  position: relative;
+  width: fit-content;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  background-clip: padding-box;
+  border-radius: 0.3rem;
+  padding: 1rem;
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+  font-size: 1rem;
+  font-weight: bold;
+}
+.modal-content > * {
+  padding: 0.5rem;
+}
+.modal-close {
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 0.25rem;
+}
